--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "expensify",
   "version": "1.0.0",
+  "engines":{
+    "node": "9.11.x"
+  },
   "main": "index.js",
   "author": "Rey Reyes",
   "license": "MIT",
